# Rebours

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README.md
MAL/descriptor/: CMakeLists.txt  INSTALL
MAL/descriptor/src/: dump.cpp  storage.cpp
MAL/descriptor/src/x86_64_Linux/: build_register_maps.cpp  build_stack_init_data.cpp  build_stack_sections.cpp  build_tls_template.cpp
MAL/encoder/: CMakeLists.txt  INSTALL  README
MAL/encoder/src/: encode.cpp
MAL/loader/: CMakeLists.txt  INSTALL  README
MAL/loader/src/: buffer_io.cpp  dependencies_graph.cpp  descriptor.cpp  dump.cpp  file_props.cpp  file_utils.cpp  load.cpp  platform.cpp  relocations.cpp  sections_table.cpp  special_sections.cpp
MAL/loader/src/detail/: address_fixing.cpp  load_elf.cpp  load_elf_32bit.cpp  load_elf_64bit.cpp  load_mach.cpp  load_mach_32bit.cpp  load_mach_64bit.cpp  load_pe.cpp  load_pe_32bit.cpp  load_pe_64bit.cpp  load_props_elf.cpp  load_props_mach.cpp  load_props_pe.cpp  mutable_sections_table.cpp
MAL/loader/src/special_sections/: elf_tls.cpp  exceptions.cpp  load_configuration_structure.cpp  special_section_properties.cpp  thread_local_storage_initialisers.cpp
MAL/loader/tests/: data_path.cpp  data_path.hpp  test.hpp
MAL/loader/tests/test01/: CMakeLists.txt  main.cpp
MAL/prologue/: CMakeLists.txt  INSTALL  README
MAL/prologue/src/: builder.cpp  builder_x86_64_Linux.cpp
MAL/recogniser/: CMakeLists.txt  INSTALL  README
MAL/recogniser/src/: dump.cpp  file_utils.cpp  recognise.cpp
MAL/recogniser/src/detail/: dump_x86_64_Linux.cpp  recognise_x86_64_Linux.cpp  recognise_x86_64_Linux_syscall_syscall.cpp  recognise_x86_64_Linux_syscall_utils.cpp  recognition_data.cpp  recognition_engine_x86_64_Linux.cpp  register_info.cpp
MAL/reloader/: CMakeLists.txt  INSTALL  README
MAL/reloader/src/: reload.cpp
analysis/native_execution/: CMakeLists.txt  INSTALL  README
analysis/native_execution/src/: branching_condition.cpp  choose_next_unexplored_exit.cpp  close_unexplored_exit.cpp  compute_input_for_reaching_next_goal.cpp  execute_instruction.cpp  execute_program.cpp  execution_properties.cpp  find_next_goal_from_unexplored_exit.cpp  find_traces_related_to_next_goal.cpp  merge_recovered_traces.cpp  natexe_dump.cpp  recovery_properties.cpp  run.cpp  setup_next_execution_properties.cpp
bitvectors/: CMakeLists.txt  INSTALL  README
bitvectors/include/rebours/bitvectors/: expression.hpp  expression_algo.hpp  expression_io.hpp  large_types.hpp  sat_checking.hpp  symbol.hpp
bitvectors/src/: expression.cpp  expression_algo.cpp  expression_load_smtlib2.cpp  expression_save_smtlib2.cpp  large_types.cpp  sat_checking.cpp  symbol.cpp
bitvectors/src/detail/: execute_shell_command_with_async_pipe.cpp  file_utils.cpp  sat_checking_interruption_function.cpp  unique_handles.cpp
bitvectors/src/sat_engine_boolector/: sat_engine_boolector.cpp
bitvectors/src/sat_engine_mathsat5/: sat_engine_mathsat5.cpp
bitvectors/src/sat_engine_z3/: sat_engine_z3.cpp
bitvectors/tests/communication_with_solver/: CMakeLists.txt  main.cpp
bitvectors/tests/expressions_io/: CMakeLists.txt  main.cpp
bitvectors/tests/management_of_expressions/: CMakeLists.txt  main.cpp
bitvectors/tests/management_of_symbols/: CMakeLists.txt  main.cpp
data/: CMakeLists.txt
data/benchmarks/: CMakeLists.txt  SOURCES.txt
data/benchmarks/loading/: CMakeLists.txt
data/benchmarks/loading/loadlibs/: CMakeLists.txt  import_export.hpp
data/benchmarks/reachability/: CMakeLists.txt
data/benchmarks/reachability/DOIF/: CMakeLists.txt
data/benchmarks/reachability/DOIFex/: CMakeLists.txt
data/benchmarks/reachability/EQCNT/: CMakeLists.txt  EQCNT.c
data/benchmarks/reachability/EQCNTex/: CMakeLists.txt  EQCNTex.c
data/benchmarks/reachability/HW/: CMakeLists.txt  HW.c
data/benchmarks/reachability/HWM/: CMakeLists.txt  HWM.c
data/benchmarks/reachability/OneLoop/: CMakeLists.txt  OneLoop.c
data/benchmarks/reachability/TwoLoops/: CMakeLists.txt  TwoLoops.c
data/benchmarks/reachability/decode_packets/: CMakeLists.txt  decode_packets.c
data/benchmarks/reachability/hello/: CMakeLists.txt  hello.c
data/benchmarks/reachability/matrIR/: CMakeLists.txt  matrIR.c
data/benchmarks/reachability/matrIR_dyn/: CMakeLists.txt  matrIR_dyn.c
data/benchmarks/self_rewriting/: CMakeLists.txt  build.py
data/benchmarks/self_rewriting/inc_constant_in_mov/: inc_constant_in_mov.asm
data/benchmarks/self_rewriting/inc_constant_in_mov_2/: inc_constant_in_mov_2.asm
data/benchmarks/self_rewriting/move_block_of_code/: CMakeLists.txt  move_block_of_code.asm
data/benchmarks/self_rewriting/permute_instructions/: permute_instructions.asm
data/benchmarks/self_rewriting/swap_tiny/: swap_tiny.asm
data/benchmarks/src/loadlibs/: CMakeLists.txt
data/benchmarks/src/loadlibs/src/: CMakeLists.txt  (+1 more)
data/tests/asm/src/: where_was_i_A.asm
data/tests/c/src/: DOIF.c  DOIFex.c  HW.c  HWM.c  OneLoop.s  TwoLoops.c  WinDriver.c  decode_packets.c  hello.c  matrIR.c  matrIR_dyn.c
program/: CMakeLists.txt  INSTALL  README
program/include/rebours/program/: assembly.hpp  digraph.hpp  instruction.hpp  large_types.hpp  program.hpp  test.hpp
program/src/: assembly.cpp  assembly_instruction.cpp  assembly_loader.cpp  assembly_writer.cpp  instruction.cpp  large_types.cpp  program.cpp
tests/MAL/loader/test01/: CMakeLists.txt  main.cpp
tests/bitvectors/management_of_expressions/: CMakeLists.txt  main.cpp
tool/natexe/: CMakeLists.txt  INSTALL  README
tool/natexe/include/natexe/: argparser.hpp  file_utils.hpp
tool/natexe/src/: argparser.cpp  file_utils.cpp  main.cpp
utility/: .gitignore  CMakeLists.txt  INSTALL  README
utility/include/rebours/utility/: assumptions.hpp  buffer_io.hpp  config.hpp  development.hpp  digraph.hpp  endian.hpp  fail_message.hpp  file_utils.hpp  invariants.hpp  large_types.hpp  macro_to_string.hpp  std_pair_hash.hpp  test.hpp  timeprof.hpp  timestamp.hpp  unique_handle.hpp
utility/src/: buffer_io.cpp  fail_message.cpp  file_utils.cpp  large_types.cpp  test.cpp  timeprof.cpp  timestamp.cpp  unique_handle.cpp
(+109 files in other folders)
